tests/errors/from_yaml_missing_field.dang
enum Status { PASSED FAILED }

type Child {
  pub name: String!
  pub outcome: Status!
}

type Summary {
  pub children: [Child!]!
}

let summary: Summary! = fromYAML("""
children:
  - name: one
""")
